--- a/workflows/ci.yml
+++ b/workflows/ci.yml
@@ -1,38 +1,27 @@
-name: Continuous Integration
+name: Deploy Static Site
 
 on:
   push:
     branches:
-      - main  # Trigger the workflow when pushing to the main branch
-  pull_request:
-    branches:
-      - main  # Trigger the workflow when a pull request is opened to the main branch
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the CI pipeline
+  deploy:
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Checks out the code from the repository
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3  # Set up Node.js environment
+      # Optional: Validate your HTML
+      - name: Validate HTML
+        uses: Cyb3r-Jak3/html5validator-action@v1
         with:
-          node-version: '16'  # Specify the Node.js version to use
+          files: weather.html
 
-      - name: Install dependencies
-        run: npm install  # Install the dependencies listed in package.json
-
-      - name: Lint code
-        run: npm run lint  # Run the linting script (ensure you have it in package.json)
-
-      - name: Run tests
-        run: npm test  # Run the tests (ensure you have the test script defined in package.json)
-
-      - name: Build project
-        run: npm run build  # Optional step if your project requires a build process
-
-      - name: Deploy (optional)
-        run: npm run deploy  # Add this if you have a deployment step in your pipeline
-        if: github.ref == 'refs/heads/main'  # Only deploy on the main branch
+      # Example: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .  # current directory contains index.html
